# obsync

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.agent.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  GETTING_STARTED.md  MULTI_PC.md  PROJECT_RECORD.md  SECURITY.md  SUPPORTED_FILES.md  UPDATING.md
docs/releases/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.12.1.md  v0.13.0.md  v0.13.1.md  v0.14.0.md  v0.15.0.md  v0.15.1.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.20.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
scripts/: _release_audit_current.py  _release_stress_vault.py  obsync_companion.py  obsync_entry.py
src/obsync/: __init__.py  agent.py  api.py  cli.py  companion.py  config.py  db.py  desktop.py  extractors.py  knowledge_graph.py  llm.py  markdown.py  profiles.py  security.py  service.py  vault_intelligence.py
src/obsync/static/: app.js  index.html  styles.css
tests/: conftest.py  test_agent.py  test_api_integration.py  test_auth.py  test_cli.py  test_companion.py  test_desktop.py  test_extractors.py  test_graph_integration.py  test_knowledge_graph.py  test_llm.py  test_markdown.py  test_real_ai_e2e.py  test_security.py  test_service.py  test_vault_intelligence.py
